<resources>
    <string name="app_name">混凝土试块RFID系统</string>
    <string name="pref_menu_user">用户信息</string>
    <string name="pref_menu_oper">基本操作</string>
    <string name="pref_menu_readcard">读卡</string>
    <string name="pref_menu_recordcard">历史记录</string>

    <string name="pref_menu_sg_oper">试件成型</string>
    <string name="pref_menu_addcard">新增</string>
    <string name="pref_menu_sy_oper">收样操作</string>
    <string name="pref_menu_collect">收样</string>
    <string name="pref_menu_setting">设置</string>

    <string name="pref_menu_register">注册</string>

    <!-- Read Card -->
    <string name="pref_title_card_info">卡片信息</string>
    <string name="pref_card_sjbh">试件编号</string>
    <string name="pref_card_card">卡    号</string>
    <string name="pref_card_gcmc">工程名称</string>
    <string name="pref_card_wtdw">委托单位</string>
    <string name="pref_card_sgdw">施工单位</string>
    <string name="pref_card_gjbw">构件部位</string>
    <string name="pref_card_jzdw">见证单位</string>
    <string name="pref_card_jzr">见 证 人</string>
    <string name="pref_card_jzbh">见证编号</string>
    <string name="pref_card_bzdw">拌制单位</string>
    <string name="pref_card_phbbh">配合比编号</string>
    <string name="pref_card_yhfs">养护方式</string>
    <string name="pref_card_qddj">强度等级</string>
    <string name="pref_card_sclsh">生产流水号</string>
    <string name="pref_card_yplx">样品类型</string>
    <string name="pref_card_zzrq">制作日期</string>
    <string name="pref_card_jcjg">检测机构</string>
    <string name="pref_card_wtbh">委托编号</string>
    <string name="pref_card_ypbh">样品编号</string>
    <string name="pref_card_zhz">荷载值</string>
    <string name="pref_card_kyqd">抗压强度</string>
    <string name="pref_card_sysj">试验时间</string>
    <string name="pref_card_gcid">工程ID</string>
    <string name="pref_card_syrq">收样日期</string>
    <string name="pref_card_syjg">收样机构</string>

    <string name="pref_image_lsit">图片列表</string>


    <!-- add card -->
    <string name="pref_title_project_info">工程信息</string>
    <string name="pref_card_number1">卡号1:</string>
    <string name="pref_card_number2">卡号2:</string>
    <string name="pref_card_number3">卡号3:</string>
    <string name="pref_add_default_dw">福州市混凝土试块芯片植入系统</string>
    <string name="pref_add_card_gcmc">测试工程</string>
    <string name="pref_add_card_wtdw">委托单位</string>
    <string name="pref_card_card_sgdw">施工单位</string>
    <string name="pref_card_card_jldw">监理单位</string>

    <string name="pref_choose_title">操作</string>
    <string name="pref_choose_image">显示图片</string>
    <string name="pref_choose_snap">拍照</string>
    <string name="pref_choose_delete">删除</string>

    <!-- Upload -->
    <string name="pref_upload">上传</string>

    <!-- Collect -->
    <string name="history_sg">样品成型</string>
    <string name="collect_titol">样品接收</string>

    <!-- System Info -->
    <string name="pref_title_sys_info">系统信息</string>
    <string name="pref_sys_version">版本</string>
    <string name="pref_sys_user">用户名</string>
    <string name="pref_sys_passwd">密码</string>
    <string name="pref_sys_usertype">用户类型</string>
    <string name="pref_sys_userdw">用户单位</string>
    <string name="pref_sys_login">已登录</string>
    <string name="pref_sys_logout">未登录</string>
    <string name="pref_sys_login_oper">登录</string>
    <string name="pref_sys_logout_regeister">注册</string>
    <string name="pref_sys_logout_oper">退出</string>

    <!-- Toast Info -->
    <string name="toast_hit_load_wait">加载中，请稍后.....</string>
    <string name="toast_hit_upload_wait">上传中，请稍后.....</string>
    <string name="toast_hit_sync_wait">同步中，请稍后.....</string>
    <string name="toast_hit_new_version">当前已是最新版本!</string>
    <string name="toast_hit_net_error">网络异常！</string>
    <string name="toast_hit_sqlserver_error">服务器异常！</string>
    <string name="toast_hit_sql_error">数据获取异常！</string>
    <string name="toast_hit_link_error">数据未更新！</string>
    <string name="toast_hit_upload_success">上传成功！</string>
    <string name="toast_hit_upload_error">上传失败！</string>
    <string name="toast_hit_upload_not_empty">数据已存在！</string>
    <string name="toast_hit_upgrade_success">更新成功！</string>
    <string name="toast_hit_upgrade_error">更新失败！</string>
    <string name="toast_hit_liucheng_snap">功能暂未开通！</string>
    <string name="toast_hit_save_success">保存成功！</string>
    <string name="toast_hit_save_error">保存失败！</string>
    <string name="toast_hit_login_error">请先登录！</string>
    <string name="toast_hit_same_id">已存在相同卡号</string>
    <string name="toast_hit_nfc_close">是否打开NFC</string>
    <string name="toast_hit_delete_card">是否删除该卡号</string>
    <string name="toast_hit_delete_record">是否删除该记录</string>
    <string name="toast_hit_upgrade_record">是否上传该记录</string>
    <string name="toast_hit_upload">是否上传记录</string>
    <string name="toast_hit_login_wait">登录中,请稍后.....</string>
    <string name="toast_hit_register_error_user">用户名密码不能为空</string>
    <string name="toast_hit_register_success">注册成功</string>
    <string name="toast_hit_register_error">注册失败</string>
    <string name="toast_hit_gcinfo_empty">工程信息不能为空</string>
    <string name="toast_hit_upgrade_gcinfo">是否上传工程信息</string>
    <string name="toast_hit_upgrade_rfid">是否上传芯片信息</string>
    <string name="toast_hit_gcinfo_needadd">请先添加工程信息</string>
    <string name="toast_hit_gcinfo_save_error">请先上传当前工程信息</string>
    <string name="toast_hit_delete_success">删除成功</string>
    <string name="toast_hit_delete_fail">删除失败</string>
    <string name="toast_hit_quit">再按一次退出</string>
    <string name="toast_hit_login_fail">登陆失败</string>

    <!-- Http Echo -->
    <string name="http_SUCCESS">操作成功</string>
    <string name="http_ERROR_COMMON">请求错误</string>
    <string name="http_ERROR_PARAM">请求参数错误</string>
    <string name="http_ERROR_FORMAT">请求格式错误</string>
    <string name="http_ERROR_TIMEOUT">请求超时</string>
    <string name="http_ERROR_NOFOUND">请求的数据在系统中找不到</string>
    <string name="http_ERROR_LICENSE">没有访问权限</string>
    <string name="http_ERROR_ACCESS">授权错误</string>
    <string name="http_ERROR_UPLOAD">文件上传错误</string>
    <string name="http_ERROR_USERNAME">用户名错误</string>
    <string name="http_ERROR_PASSWORD">密码错误</string>
    <string name="http_ERROR_QUERY">未查询到该数据</string>
    <string name="http_ERROR_SERVER">服务器异常</string>
    <string name="http_ERROR_INSERT_DB">数据已存在数据库中</string>
    <string name="http_ERROR_DEFAULT">未知错误</string>

    <!-- Menu -->
    <string name="menu_upload_gcinfo">工程保存</string>
    <string name="menu_upload_next">下一组</string>
    <string name="menu_search">查询</string>

    <!-- Other -->
    <string name="user_type">用户类型</string>
    <string-array name="YHLX">
        <item>管理员</item>
        <item>施工现场</item>
        <item>检测机构</item>
        <item>监督机构</item>
    </string-array>

    <string name="user_regeister_type">用户类型</string>
    <string-array name="YHLX_REG">
        <item>施工现场</item>
        <item>检测机构</item>
        <item>监督机构</item>
    </string-array>

    <string name="hit_sure">注意</string>
    <string name="hit_ok">确定</string>
    <string name="hit_quit">退出</string>
    <string name="hit_find">查询</string>
    <string name="hit_edit">编辑</string>
    <string name="hit_cancle">取消</string>
    <string name="hit_delete">删除</string>
</resources>
